--- a/hieradata/global.yaml
+++ b/hieradata/global.yaml
@@ -1,4 +1,4 @@
 ---
-puppet-bootstrap::r10k_enable: true
-puppet-bootstrap::r10k_mco_enable: true
-puppet-bootstrap::r10k_repo: git@github.com:vchepkov/puppet-bootstrap.git
+puppet_bootstrap::r10k_enable: true
+puppet_bootstrap::r10k_mco_enable: true
+puppet_bootstrap::r10k_repo: git@github.com:vchepkov/puppet-bootstrap.git
